Added CRUD Functionality to BuyingDiscount and ParkingDiscount models.
