# api.yml
@@ -85,20 +85,20 @@ paths:
         200:
           description: Return status
 
-  /discount/renting/{renting_discount_id}:
+  /discount/renting/{discount_id}:
     get:
-      tags: [ Discounts ]
+      tags: [ RentingDiscounts ]
       operationId: app.get_renting_discount
       summary: Find renting discount by id
       parameters:
-        - $ref: '#/parameters/renting_discount_id'
+        - $ref: '#/parameters/discount_id'
       responses:
         200:
           description: Returned renting discount with the specified id
 
   /discount/renting/:
     get:
-      tags: [ Discounts ]
+      tags: [ RentingDiscounts ]
       operationId: app.get_all_renting_discounts
       summary: Get all renting discounts
       responses:
@@ -107,18 +107,18 @@ paths:
 
   /discount/renting:
     post:
-      tags: [ Discounts ]
+      tags: [ RentingDiscounts ]
       operationId: app.renting_discount_add
       summary: Adding new renting discount
       parameters:
-        - $ref: '#/parameters/renting_discount_body'
+        - $ref: '#/parameters/discount_body'
       responses:
         200:
           description: Return status
 
   /discount/renting/user/{user_id}:
     get:
-      tags: [ Discounts ]
+      tags: [ RentingDiscounts ]
       operationId: app.get_renting_discount_for_user
       summary: Get discount renting by user
       parameters:
@@ -127,28 +127,158 @@ paths:
         200:
           description: Return renting discount with the user id specified
 
-  /discount/renting/delete/{renting_discount_id}:
+  /discount/renting/delete/{discount_id}:
     delete:
-      tags: [ Discounts ]
+      tags: [ RentingDiscounts ]
       operationId: app.renting_discount_delete
       summary: Deleting renting discount
       parameters:
-        - $ref: '#/parameters/renting_discount_id'
+        - $ref: '#/parameters/discount_id'
       responses:
         200:
           description: Delete renting discount with the specified id
 
-  /discount/renting/update/{renting_discount_id}:
+  /discount/renting/update/{discount_id}:
     put:
-      tags: [ Discounts ]
+      tags: [ RentingDiscounts ]
       operationId: app.renting_discount_update
       summary: Update renting discount with given id
       parameters:
-        - $ref: '#/parameters/renting_discount_id'
-        - $ref: '#/parameters/renting_discount_put'
+        - $ref: '#/parameters/discount_id'
+        - $ref: '#/parameters/discount_put'
       responses:
         200:
           description: Update and return renting discount with the specified id
+
+  /discount/buying/{discount_id}:
+    get:
+      tags: [ BuyingDiscounts ]
+      operationId: app.get_buying_discount
+      summary: Find renting discount by id
+      parameters:
+        - $ref: '#/parameters/discount_id'
+      responses:
+        200:
+          description: Returned discount with the specified id
+
+  /discount/buying/:
+    get:
+      tags: [ BuyingDiscounts ]
+      operationId: app.get_all_buying_discounts
+      summary: Get all buying discounts
+      responses:
+        200:
+          description: Return all buying discounts
+
+  /discount/buying:
+    post:
+      tags: [ BuyingDiscounts ]
+      operationId: app.buying_discount_add
+      summary: Adding new buying discount
+      parameters:
+        - $ref: '#/parameters/discount_body'
+      responses:
+        200:
+          description: Return status
+
+  /discount/buying/user/{user_id}:
+    get:
+      tags: [ BuyingDiscounts ]
+      operationId: app.get_buying_discount_for_user
+      summary: Get buying discount by user
+      parameters:
+        - $ref: '#/parameters/user_id'
+      responses:
+        200:
+          description: Return buying discount with the user id specified
+
+  /discount/buying/delete/{discount_id}:
+    delete:
+      tags: [ BuyingDiscounts ]
+      operationId: app.buying_discount_delete
+      summary: Deleting buying discount
+      parameters:
+        - $ref: '#/parameters/discount_id'
+      responses:
+        200:
+          description: Delete buying discount with the specified id
+
+  /discount/buying/update/{discount_id}:
+    put:
+      tags: [ BuyingDiscounts ]
+      operationId: app.buying_discount_update
+      summary: Update buying discount with given id
+      parameters:
+        - $ref: '#/parameters/discount_id'
+        - $ref: '#/parameters/discount_put'
+      responses:
+        200:
+          description: Update and return buying discount with the specified id
+
+  /discount/parking/{discount_id}:
+    get:
+      tags: [ ParkingDiscounts ]
+      operationId: app.get_parking_discount
+      summary: Find parking discount by id
+      parameters:
+        - $ref: '#/parameters/discount_id'
+      responses:
+        200:
+          description: Returned discount with the specified id
+
+  /discount/parking/:
+    get:
+      tags: [ ParkingDiscounts ]
+      operationId: app.get_all_parking_discounts
+      summary: Get all parking discounts
+      responses:
+        200:
+          description: Return all parking discounts
+
+  /discount/parking:
+    post:
+      tags: [ ParkingDiscounts ]
+      operationId: app.parking_discount_add
+      summary: Adding new parking discount
+      parameters:
+        - $ref: '#/parameters/discount_body'
+      responses:
+        200:
+          description: Return status
+
+  /discount/parking/user/{user_id}:
+    get:
+      tags: [ ParkingDiscounts ]
+      operationId: app.get_parking_discount_for_user
+      summary: Get parking discount by user
+      parameters:
+        - $ref: '#/parameters/user_id'
+      responses:
+        200:
+          description: Return parking discount with the user id specified
+
+  /discount/parking/delete/{discount_id}:
+    delete:
+      tags: [ ParkingDiscounts ]
+      operationId: app.parking_discount_delete
+      summary: Deleting parking discount
+      parameters:
+        - $ref: '#/parameters/discount_id'
+      responses:
+        200:
+          description: Delete parking discount with the specified id
+
+  /discount/parking/update/{discount_id}:
+    put:
+      tags: [ ParkingDiscounts ]
+      operationId: app.parking_discount_update
+      summary: Update parking discount with given id
+      parameters:
+        - $ref: '#/parameters/discount_id'
+        - $ref: '#/parameters/discount_put'
+      responses:
+        200:
+          description: Update and return parking discount with the specified id
 parameters:
   coupon_body:
     name: coupon_body
@@ -191,16 +321,16 @@ parameters:
     required: true
     type: integer
 
-  renting_discount_id:
-    name: renting_discount_id
-    description: The id of the renting discount we are looking for
+  discount_id:
+    name: discount_id
+    description: The id of the discount we are looking for
     in: path
     required: true
     type: integer
 
-  renting_discount_body:
-    name: renting_discount_body
-    description: Adding a renting discount
+  discount_body:
+    name: discount_body
+    description: Adding a discount
     in: body
     schema:
       required:
@@ -212,9 +342,9 @@ parameters:
         userId:
           type: integer
 
-  renting_discount_put:
-    name: renting_discount_put
-    description: Updating a renting discount
+  discount_put:
+    name: discount_put
+    description: Updating a discount
     in: body
     schema:
       required:
@@ -222,7 +352,6 @@ parameters:
         - validUntil
         - discountPercent
         - discountRank_type
-        - userId
         - code
       properties:
         validFrom:
@@ -233,8 +362,6 @@ parameters:
           type: number
         discountRank_type:
           type: string
-        userId:
-          type: integer
         code:
           type: string
 
